Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2723

a client hangs forever in osc_extent_wait() on directio

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6617

      PID: 6774 TASK: ffff8803fc62e0c0 CPU: 1 COMMAND: "fsx-linux-aio"
      #0 [ffff8803de9334e8] schedule at ffffffff8141e405
      #1 [ffff8803de9335c0] cfs_waitq_wait at ffffffffa01a66ee [libcfs]
      #2 [ffff8803de9335d0] osc_extent_wait at ffffffffa0725aec [osc]
      #3 [ffff8803de933740] osc_cache_wait_range at ffffffffa0726167 [osc]
      #4 [ffff8803de9338d0] osc_io_fsync_end at ffffffffa0717a79 [osc]
      #5 [ffff8803de933910] cl_io_end at ffffffffa03048b2 [obdclass]
      #6 [ffff8803de933940] lov_io_end_wrapper at ffffffffa07c26f9 [lov]
      #7 [ffff8803de933960] lov_io_fsync_end at ffffffffa07c407b [lov]
      #8 [ffff8803de933990] cl_io_end at ffffffffa03048b2 [obdclass]
      #9 [ffff8803de9339c0] cl_io_loop at ffffffffa0308c4a [obdclass]
      #10 [ffff8803de9339f0] cl_sync_file_range at ffffffffa08aacbb [lustre]
      #11 [ffff8803de933a60] ll_writepages at ffffffffa08d0164 [lustre]
      #12 [ffff8803de933aa0] do_writepages at ffffffff810cd631
      #13 [ffff8803de933ab0] __filemap_fdatawrite_range at ffffffff810c5b65
      #14 [ffff8803de933b10] filemap_write_and_wait_range at ffffffff810c5bca
      #15 [ffff8803de933b40] generic_file_buffered_write at ffffffff810c5e23
      #16 [ffff8803de933c10] __generic_file_aio_write at ffffffff810c6d37
      #17 [ffff8803de933cc0] generic_file_aio_write at ffffffff810c6e42
      #18 [ffff8803de933d00] vvp_io_write_start at ffffffffa08fd4f6 [lustre]
      #19 [ffff8803de933d40] cl_io_start at ffffffffa0304a1a [obdclass]
      #20 [ffff8803de933d70] cl_io_loop at ffffffffa0308c3c [obdclass]
      #21 [ffff8803de933da0] ll_file_io_generic at ffffffffa08a9cc5 [lustre]
      #22 [ffff8803de933e10] ll_file_aio_write at ffffffffa08aa01b [lustre]
      #23 [ffff8803de933e60] aio_rw_vect_retry at ffffffff811426d4
      #24 [ffff8803de933e90] aio_run_iocb at ffffffff81143ffa
      #25 [ffff8803de933ec0] sys_io_submit at ffffffff81144e38
      #26 [ffff8803de933f80] system_call_fastpath at ffffffff8100305b
      RIP: 00007f7f5d49a6f7 RSP: 00007fff771a51a8 RFLAGS: 00010217
      RAX: 00000000000000d1 RBX: ffffffff8100305b RCX: 00000000000000e2
      RDX: 00007fff771a5150 RSI: 0000000000000001 RDI: 00007f7f5d8b0000
      RBP: 0000000000001000 R8: 0000000000000000 R9: 0000000000000003
      R10: 000000000000000f R11: 0000000000000202 R12: 00007fff771a5600
      R13: 0000000000404658 R14: 0000000000001000 R15: 0000000000001000
      ORIG_RAX: 00000000000000d1 CS: 0033 SS: 002b

            wc-triage WC Triage
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: